Make example path helpers more portable
Agent-Logs-Url: https://github.com/earlb710/novlfx-engine/sessions/228a27de-9a11-469e-a126-735a5678fc0a

Co-authored-by: earlb710 <54583240+earlb710@users.noreply.github.com>